# practicum-rust

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.claude/: settings.json
.config/: nextest.toml
.github/workflows/: ci.yml  docs.yml
crates/blog-cli/: Cargo.toml  README.md
crates/blog-cli/src/: main.rs
crates/blog-client/: Cargo.toml  README.md
crates/blog-client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs  types.rs
crates/blog-server/: Cargo.toml  README.md  build.rs
crates/blog-server/migrations/: 20250101000001_create_users.sql  20250101000002_create_posts.sql
crates/blog-server/proto/: blog.proto
crates/blog-server/src/: main.rs
crates/blog-server/src/application/: auth_service.rs  blog_service.rs
crates/blog-server/src/data/: post_repository.rs  user_repository.rs
crates/blog-server/src/domain/: error.rs  post.rs  user.rs
crates/blog-server/src/infrastructure/: config.rs  database.rs  jwt.rs  mod.rs  password.rs
crates/blog-server/src/presentation/grpc/: mod.rs  service.rs
crates/blog-server/src/presentation/http/: auth_extractor.rs  auth_handlers.rs  errors.rs  mod.rs  post_handlers.rs  routes.rs  state.rs
crates/blog-wasm/: Cargo.toml  README.md  index.html
crates/blog-wasm/src/: api.rs  dom.rs  lib.rs  storage.rs
crates/blur_plugin/: Cargo.toml
crates/blur_plugin/src/: lib.rs
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/: ffi_pipeline.rs
crates/image_processor/: Cargo.toml
crates/image_processor/src/: error.rs  lib.rs  main.rs  plugin_loader.rs
crates/mirror_plugin/: Cargo.toml
crates/mirror_plugin/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: error.rs  lib.rs  reader.rs  writer.rs
crates/parser/src/serde/: csv.rs  error.rs  mod.rs
crates/parser/src/serde/binary/: de.rs  mod.rs  ser.rs
crates/parser/src/serde/text/: de.rs  mod.rs  ser.rs
crates/parser/src/transaction/: mod.rs  types.rs  validation.rs
crates/quote-client/: Cargo.toml  README.md
crates/quote-client/examples/: tickers.txt
crates/quote-client/src/: connection.rs  lib.rs  main.rs  ping.rs  receiver.rs
crates/quote-common/: Cargo.toml  README.md
crates/quote-common/src/: lib.rs
crates/quote-server/: Cargo.toml  README.md
crates/quote-server/src/: client_sender.rs  generator.rs  lib.rs  main.rs  ping_registry.rs  protocol.rs
docs/: .gitignore  mdx-components.tsx  next.config.mjs  package.json
docs/app/: globals.css  layout.tsx
docs/app/[[...mdxPath]]/: page.tsx
docs/content/: _meta.ts  index.mdx
docs/content/api/: .gitignore
docs/content/tasks/: 1-read-parse-compare.mdx  2-streaming-quotes.mdx  3-blog-platform.mdx  4-image-processor-plugins.mdx
docs/content/transactions/: _meta.ts
scripts/: start.sh
tests/e2e/: Cargo.toml
tests/e2e/src/: lib.rs
tests/e2e/tests/: comparer.rs  converter.rs
tools/comparer/: Cargo.toml
tools/comparer/src/: main.rs
tools/converter/: Cargo.toml
tools/converter/src/: main.rs
tools/xtask/: Cargo.toml
tools/xtask/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
