[workspace]
resolver = "2"
members = [
    "crates/*",
    "tools/*",
    "xtask",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.1"

[workspace.dependencies]
anyhow = "1.0.100"
clap = "4.5.54"
thiserror = "2.0.17"
xshell = "0.2.7"
rustdoc-md = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rustdoc-types = "0.56.0"
csv = "1.3"
