[workspace]
resolver = "2"
members = [
    "crates/*",
    "xtask",
]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.0.1"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
thiserror = "2.0.17"
xshell = "0.2.7"
rustdoc-md = "0.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rustdoc-types = "0.56.0"
csv = "1.3"
jiff = "0.2.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.11"
rand = "0.9"
crossbeam-channel = "0.5"
ctrlc = "3.4"
image = { version = "0.25", default-features = false, features = ["png"] }
libloading = "0.8"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tonic = "0.13"
tonic-build = "0.13"
prost = "0.13"
prost-types = "0.13"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "migrate"] }
jsonwebtoken = "9"
argon2 = "0.5"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlElement", "CssStyleDeclaration", "HtmlInputElement", "HtmlTextAreaElement", "HtmlCollection", "NodeList", "Storage", "Headers", "Request", "RequestInit", "Response", "console"] }
gloo-net = { version = "0.6", features = ["http"] }
js-sys = "0.3"
serde-wasm-bindgen = "0.6"
