[package]
name = "blog-client"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
tonic.workspace = true
prost.workspace = true

[build-dependencies]
tonic-build.workspace = true
