[package]
name = "blog-server"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tonic.workspace = true
prost.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
chrono.workspace = true
dotenvy.workspace = true
rand.workspace = true

[build-dependencies]
tonic-build.workspace = true
