[package]
name = "image_processor"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
clap.workspace = true
env_logger.workspace = true
image.workspace = true
libloading.workspace = true
log.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
