[package]
name = "quote-client"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
quote-common = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
ctrlc = { workspace = true }
