[package]
name = "comparer"
edition.workspace = true
license.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "ypbank_compare"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
parser = { path = "../../crates/parser" }

[dev-dependencies]
tempfile = "3.20"
